<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workout\nBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_my_workouts">MyWorkouts</string>
    <string name="title_activity_new_workout">NewWorkoutActivity</string>
    <string name="button1_text">My Workouts</string>
    <string name="button2_text">Create New Workout</string>
    <string name="buttonDone_text">Done</string>
    <string name="buttonPlus_text">+</string>
    <string name="buttonMinus_text">-</string>
    <string name="hello_world">Hello world!</string>
    <string name="textView_NewWorkout">New Workout</string>
    <string name="textView_Exercises">Exercises</string>
    <string name="textView_Description">Description</string>
    <string name="textView_Name">Name</string>
    <string name="hint_Name">Enter Name here</string>
    <string name="hint_Description">Enter Description here</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="history">History</string>
    <string name="temp">Tmp</string>
    <string name="my_workouts">My Workouts</string>
    <string name="new_workout">New Workout</string>
    <string name="my_exercises">My Exercises</string>
    <string name="new_exercise">New Exercise</string>
    <string name="add_exercise">Add\nExercise</string>
    <string name="delete_exercise">Delete\nExercise</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="skip_button_text">Skip</string>
    <string name="timer_set_button">Set</string>
    <string name="timer_input">Seconds</string>
    <string name="title_activity_timer">Rest Timer</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="Select_Workout">Select Workout</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_view_schedule">ViewScheduleActivity</string>
    <string name="select_exercise">Select Exercise To Graph</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="title_activity_new_exercise">NewExerciseActivity</string>
    <string-array name="exercise_types">
        <item >Reps</item>
        <item >Weight</item>
        <item >Time</item>
    </string-array>
        <string name="exercise_name">Exercise Name:</string>
        <string name="exercise_description">Exercise Description:</string>

</resources>