<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScheduleActivity" >

    <DatePicker
        android:id="@+id/dp_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Select_Workout" />
    
    <Spinner 
        android:id="@+id/spnr_workouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    
    <Spinner 
        android:id="@+id/spnr_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    
    <Spinner 
        android:id="@+id/spnr_dayweek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="68dp"
        android:text="@string/buttonDone_text" />
    
   	<Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="68dp"
        android:text="@string/Cancel" /> 
        
</RelativeLayout>